--- a/package.json
+++ b/package.json
@@ -1,21 +1,32 @@
 {
-  "name": "vite-vue-typescript-starter",
+  "name": "vue-swipe-modal-example",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@takuma-ru/vue-swipe-modal": "^4.0.5",
-    "vue": "^3.2.38"
+    "@takuma-ru/vue-swipe-modal": "5.0.0-beta.1",
+    "vue": "^3.3.8"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.1.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.1.0",
-    "vue-tsc": "^0.40.7"
+    "@vitejs/plugin-vue": "^4.5.0",
+    "sass": "^1.69.5",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.0",
+    "vue-tsc": "^1.8.22"
+  },
+  "packageManager": "pnpm@8.10.2",
+  "engines": {
+    "npm": "use pnpm please!",
+    "yarn": "use pnpm please!",
+    "pnpm": ">=8.9.2"
+  },
+  "volta": {
+    "node": "20.9.0",
+    "pnpm": "8.10.2"
   }
 }
